fixed that annyoing annoying blue highlight on mobile

--- a/the-app/src/Dragonball.css
+++ b/the-app/src/Dragonball.css
@@ -5,7 +5,7 @@
   padding: 20px;
 }
 
-.title {
+.d-title {
   color: #9290C3;
   margin-bottom: 30px;
   font-size: 2rem;
